--- a/StationProject/Components/Account/Shared/AccountLayout.razor
+++ b/StationProject/Components/Account/Shared/AccountLayout.razor
@@ -2,7 +2,7 @@
 @layout StationProject.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
-<article class="content px-4">
+<article class="content px-4" style="height: 100%; justify-content: center; align-content: center">
     @if (HttpContext is null)
     {
         <p>Loading...</p>
