--- a/StationProject/Components/Account/Shared/ManageLayout.razor
+++ b/StationProject/Components/Account/Shared/ManageLayout.razor
@@ -4,8 +4,7 @@
 
 
 <div style="padding: 20px 60px">
-    <h1>Manage your account</h1>
-    <h2>Change your account settings</h2>
+    <h1>Ваш аккаунт</h1>
     <hr/>
     <div class="f-column gap-20">
         <div class="row">
