--- a/StationProject/Components/Layout/MainLayout.razor
+++ b/StationProject/Components/Layout/MainLayout.razor
@@ -11,7 +11,7 @@
     <main class="f-column">
         <HeaderCustom/>
 
-        <div style="flex: 1">
+        <div style="flex: 1; justify-content: center">
             @Body
         </div>
 
