--- a/StationProject/Components/Pages/AdminPage.razor
+++ b/StationProject/Components/Pages/AdminPage.razor
@@ -4,6 +4,8 @@
 @using StationProject.Components.Pages.AdminTabs
 @using StationProject.Models.Enums
 
+@* @attribute [Authorize(Roles="Admin,Vendor")] *@
+
 <div class="f-column" style="padding: 0 60px">
     <div class="f-row gap-20" style="padding: 20px 0">
         <button class="tab-button @GetSelectedButtonStyle(AdminTab.Stats)" @onclick="() => SelectTab(AdminTab.Stats)">Статистика</button>
