--- a/StationProject/Components/Account/Pages/ConfirmEmail.razor
+++ b/StationProject/Components/Account/Pages/ConfirmEmail.razor
@@ -10,7 +10,7 @@
 
 <PageTitle>Confirm email</PageTitle>
 
-<h1>Confirm email</h1>
+<h1>Подтверждение почты</h1>
 <StatusMessage Message="@statusMessage"/>
 
 @code {
@@ -42,7 +42,7 @@
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            statusMessage = result.Succeeded ? "Почта подтверждена! Вы можете начинать покупки" : "Error confirming your email.";
         }
     }
 
