--- a/StationProject/Components/Account/Pages/Manage/DeletePersonalData.razor
+++ b/StationProject/Components/Account/Pages/Manage/DeletePersonalData.razor
@@ -14,11 +14,11 @@
 
 <StatusMessage Message="@message"/>
 
-<h3>Delete Personal Data</h3>
+<h3>Удалить персональные данные</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>Удаленные данные не могут быть восстановлены!</strong>
     </p>
 </div>
 
@@ -30,11 +30,11 @@
         {
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password."/>
-                <label for="password" class="form-label">Password</label>
+                <label for="password" class="form-label">Пароль</label>
                 <ValidationMessage For="() => Input.Password" class="text-danger"/>
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="w-100 btn btn-lg btn-danger" type="submit">Удалить данные моего аккаунта</button>
     </EditForm>
 </div>
 
