--- a/StationProject/Components/Account/Pages/Manage/Email.razor
+++ b/StationProject/Components/Account/Pages/Manage/Email.razor
@@ -12,9 +12,9 @@
 @inject IdentityUserAccessor UserAccessor
 @inject NavigationManager NavigationManager
 
-<PageTitle>Manage email</PageTitle>
+<PageTitle>Управление почтой</PageTitle>
 
-<h3>Manage email</h3>
+<h3>Управление почтой</h3>
 
 <StatusMessage Message="@message"/>
 <div class="row">
@@ -32,23 +32,23 @@
                     <div class="input-group-append">
                         <span class="h-100 input-group-text text-success font-weight-bold">✓</span>
                     </div>
-                    <label for="email" class="form-label">Email</label>
+                    <label for="email" class="form-label">Почта</label>
                 </div>
             }
             else
             {
                 <div class="form-floating mb-3">
                     <input type="text" value="@email" class="form-control" placeholder="Please enter your email." disabled/>
-                    <label for="email" class="form-label">Email</label>
-                    <button type="submit" class="btn btn-link" form="send-verification-form">Send verification email</button>
+                    <label for="email" class="form-label">Почта</label>
+                    <button type="submit" class="btn btn-link" form="send-verification-form">Подтвердить почту</button>
                 </div>
             }
             <div class="form-floating mb-3">
                 <InputText @bind-Value="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Please enter new email."/>
-                <label for="new-email" class="form-label">New email</label>
+                <label for="new-email" class="form-label">Новая почта</label>
                 <ValidationMessage For="() => Input.NewEmail" class="text-danger"/>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Поменять почту</button>
         </EditForm>
     </div>
 </div>
