--- a/StationProject/Components/Account/Pages/Manage/SetPassword.razor
+++ b/StationProject/Components/Account/Pages/Manage/SetPassword.razor
@@ -9,13 +9,13 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Set password</PageTitle>
+<PageTitle>Установить пароль</PageTitle>
 
-<h3>Set your password</h3>
+<h3>Установите ваш пароль</h3>
 <StatusMessage Message="@message"/>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    У вас нет локального имени пользователя/пароля для этого сайта. Добавьте локальную
+    учетную запись, чтобы вы могли входить без внешнего логина.
 </p>
 <div class="row">
     <div class="col-md-6">
@@ -23,16 +23,16 @@
             <DataAnnotationsValidator/>
             <ValidationSummary class="text-danger" role="alert"/>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Please enter your new password."/>
-                <label for="new-password" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Пожалуйста, введите ваш новый пароль."/>
+                <label for="new-password" class="form-label">Новый пароль</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger"/>
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Please confirm your new password."/>
-                <label for="confirm-password" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Пожалуйста, подтвердите ваш новый пароль."/>
+                <label for="confirm-password" class="form-label">Подтвердите пароль</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger"/>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Установить пароль</button>
         </EditForm>
     </div>
 </div>
