--- a/StationProject/Components/Account/Pages/RegisterConfirmation.razor
+++ b/StationProject/Components/Account/Pages/RegisterConfirmation.razor
@@ -12,15 +12,14 @@
 
 <PageTitle>Register confirmation</PageTitle>
 
-<h1>Register confirmation</h1>
+<h1>Подтверждение почты</h1>
 
 <StatusMessage Message="@statusMessage"/>
 
 @if (emailConfirmationLink is not null)
 {
     <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+        <a href="@emailConfirmationLink">Подтвердить Почту</a>
     </p>
 }
 else
