--- a/StationProject/Components/Dialogs/AddCategoryDialog.razor
+++ b/StationProject/Components/Dialogs/AddCategoryDialog.razor
@@ -1,30 +1,28 @@
+@using StationProject.Data.Models
 @inject DialogService DialogService
 
-<h3>@(string.IsNullOrEmpty(Name) ? "Добавить новую категорию" : "Редактировать категорию")</h3>
-
-<EditForm OnValidSubmit="@Submit">
+<EditForm Model="Category" OnValidSubmit="@Submit">
     <DataAnnotationsValidator/>
 
     <div class="form-group">
         <label>Название категории:</label>
-        <InputText @bind-Value="Name" class="form-control"/>
+        <InputText @bind-Value="Category.Name" class="form-control"/>
     </div>
 
     <div class="form-group">
         <label>URL изображения:</label>
-        <InputText @bind-Value="ImageUrl" class="form-control"/>
+        <InputText @bind-Value="Category.ImageUrl" class="form-control"/>
     </div>
 
     <button type="submit" class="btn btn-primary">Подтвердить</button>
-    <button type="button" class="btn btn-secondary" @onclick="@DialogService.Close">Отмена</button>
+    <button type="button" class="btn btn-secondary" @onclick="@Close">Отмена</button>
 </EditForm>
 
 @code {
-    [Parameter] public string Name { get; set; }
-    [Parameter] public string ImageUrl { get; set; }
+    [Parameter] public Category? Category { get; set; }
 
-    private void Submit()
-    {
-        DialogService.Close(new { Name, ImageUrl });
-    }
+    private void Submit() => DialogService.Close(Category);
+
+    private void Close() => DialogService.Close();
+
 }
